# Identity-Fraud-Detection

./: README.md  pyproject.toml
Documentation/ADRs/: 0001-gated-cascade-vs-fusion-ensemble.md  0002-ewma-baseline.md  0003-sliding-window-and-reputation-floor.md  0004-asymmetric-threshold-adaptation.md  0005-theta-low-confidence-calibration.md  0006-operational-envelope-scoping.md  0007-reputation-floor-and-convergence-guarantees.md  0008-fraud-specific-metrics.md
Documentation/Dev Guide/: developers-guide.md
Paper/: paper-config.md  paper-outline.md  paper.aux  paper.bbl  paper.bib  paper.blg  paper.out  paper.tex  paper.tex.bak  paper_draft.md  sigma_verify2.py
Reviwer_Findings/review_1/: ablation-study.md  adaptive-threshold-escalation.md  attacker-design.md  baselines.md  explainability.md  fairness-analysis.md  final-verification.md  fraud-metrics.md  noniid-splits.md  privacy-model.md  review_1.md
Reviwer_Findings/review_2/: S1-cascade-analysis.md  S10-honest-fpr-metrics.md  S2-convergence-proof.md  S3-server-compromise.md  S5-privacy-model-strengthen.md  S6-sr11-7-validation.md  S7-fairness-blind-spot.md  S8-regulatory-corrections.md  S9-a2-adaptive.md  review_2.md
Reviwer_Findings/review_3/: 00_Editorial_Decision_Package.md  01_EIC_Review.md  02_R1_Methodology_Review.md  03_R2_Domain_Review.md  04_R3_Perspective_Review.md  05_Devils_Advocate_Report.md  peer_review_simulation.md
Reviwer_Findings/review_4/: 00_Editorial_Decision_Package.md  01_EIC_Review.md  02_R1_Methodology_Review.md  03_R2_Domain_Review.md  (+3 more)
ifd_fintech/: __init__.py
(+44 files in other folders)
